Added gymnastics case study. Added cartography images, but not finished

--- a/Desktop/portfolio/src/index.css
+++ b/Desktop/portfolio/src/index.css
@@ -63,6 +63,12 @@ canvas {
   margin-bottom: 2rem;
 }
 
+.image-item-continuous {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 
 @layer components {
   .serif {
