--- a/Desktop/portfolio/src/index.css
+++ b/Desktop/portfolio/src/index.css
@@ -63,6 +63,14 @@ canvas {
   margin-bottom: 2rem;
 }
 
+.image-item-overlap {
+  width: 100%;
+  height: auto;
+  margin-bottom: 2rem;
+  max-width: 1000px;
+  margin-bottom: 2rem;
+}
+
 .image-item-continuous {
   width: 100%;
   height: auto;
